# FireDetection_site

Frontend/: docker-compose.front.yml  index.html  package.json
Frontend/src/: main.tsx
Frontend/src/api/: api.ts  authApi.ts  cameraApi.ts  cameraStreamApi.ts  socket.ts  trackApi.ts
Frontend/src/pages/: CameraPage.tsx  LoginPage.tsx  MapPage.tsx
Frontend/src/routes/: AppRoutes.tsx  ProtectedRoutes.tsx
Frontend/src/styles/: camera.css  layout.css  (+1 more)
backend/: .flaskenv  .gitignore  Dockerfile  config.py  cookies.txt  docker-compose.back.yml  package-lock.json  requirements.txt  run.py  wsgi.py
backend/app/: __init__.py  config.py  extensions.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
inference_engine/: .gitignore  Dockerfile  docker-compose.yml  fire_backup.sql  requirements.txt
inference_engine/configs/: live.yaml
inference_engine/core/: orchestrator_context.py  stream_manager.py
inference_engine/ingest/: clock.py  stream_reader.py  video_decoder.py
inference_engine/observability/: latency.py
inference_engine/orchestrator/: camera_config.py  server.py  state_machine.py
inference_engine/pipeline/: orchestrator.py  test_pipeline.py
inference_engine/queue/: frame_queue.py  policies.py  roi_queue.py
inference_engine/rust/cnn_engine/: Cargo.toml  Dockerfile
inference_engine/rust/cnn_engine/src/: io.rs  lib.rs  main.rs  postprocess.rs  preprocess.rs
inference_engine/rust/cnn_engine/src/process/: backend.rs  mod.rs  model_target.rs
inference_engine/storage/: s3_minio_reader.py
(+76 files in other folders)
